Table workout.exercise {
  id bigint [pk, increment]
  name text [not null, unique]
  description text [not null]
  target_muscle text [not null]
  specific_target_muscle text [not null]
}

Table workout.workout_plan {
  id bigint [pk, increment]
  user_id uuid [not null, ref: > identity.user.id]
  is_active boolean [not null]
  updated_at timestamptz [not null]
  created_at timestamptz [not null]
}

Table workout.workout_split {
  id bigint [pk, increment]
  workout_id bigint [not null, ref: > workout.workout_plan.id]
  name text [not null]
  order_index integer [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  is_active boolean [not null]

  indexes { (workout_id, order_index) [unique, note: 'Applies to active splits only'] }
}

Table workout.exercise_to_workout_split {
  id bigint [pk, increment]
  workout_split_id bigint [not null, ref: > workout.workout_split.id]
  exercise_id bigint [not null, ref: > workout.exercise.id]
  created_at timestamptz [not null]
  order_index bigint [not null]
  is_active boolean [not null]

  indexes { (workout_split_id, exercise_id) [unique] }
}

Table workout.workout_set {
  id uuid [pk]
  exercise_to_split_id bigint [not null, ref: > workout.exercise_to_workout_split.id]
  order_index integer [not null]
  reps integer [not null]

  indexes { (exercise_to_split_id, order_index) [unique] }
}

Table identity.user { id uuid [pk] }
